1.0.1 (not yet released):
- Automatically detect the source directory on RPM based systems (patch from
O. Lahaye).

1.0.0:
- Support the creation of bridges.
- Support the restart_dhcpd option.