@@ -19,7 +19,6 @@ clean:
 	@rm -f build-stamp configure-stamp
 	@rm -rf debian/$(PKG)
 	@rm -f $(PKG).tar.gz
-	@rm -f $(PKG).spec
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} clean ) ; done
 
 dist: clean
@@ -33,8 +32,6 @@ dist: clean
 	@rm -f /tmp/$(PKG).tar.gz
 
 rpm: dist
-	sed -e "s/PERLLIBPATH/$(SEDLIBDIR)/" < $(PKG).spec.in \
-        > $(PKG).spec
 	cp $(PKG).tar.gz `rpm --eval '%_sourcedir'`
 	rpmbuild -bb ./$(PKG).spec
 
