@@ -7,8 +7,8 @@ SUBDIRS :=
 FILES := network-configurator
 
 doc:
-	install -d -m 0755 $(DESTDIR)/usr/local/man/man1/
-	for bin in ${FILES} ; do ( pod2man --section=1 $$bin $(DESTDIR)/usr/local/man/man1/$$bin.1 ) ; done
+	install -d -m 0755 $(DESTDIR)/$(MANDIR)/man1/
+	for bin in ${FILES} ; do ( pod2man --section=1 $$bin $(DESTDIR)/$(MANDIR)/man1/$$bin.1 ) ; done
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
